--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </header>
 <body class="parallax"> </body>
 <div>
+    
     <h1>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis aperiam deserunt ea minima quis vitae illo deleniti, fugiat atque dolorum suscipit esse beatae nihil eaque voluptas exercitationem, quo facilis similique!
     </h1>
@@ -28,8 +29,27 @@
 </div>
 
 <main>
-    <H1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, non enim, voluptatem aliquid quod repellendus eligendi alias asperiores fugit veritatis hic similique ex saepe consequuntur magnam architecto nisi voluptas quibusdam?</H1>
-    <H1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, non enim, voluptatem aliquid quod repellendus eligendi alias asperiores fugit veritatis hic similique ex saepe consequuntur magnam architecto nisi voluptas quibusdam?</H1>
+    <marquee scrollamount="15" class="rainbow-letters">
+        <span>H</span>
+        <span>A</span>
+        <span>P</span>
+        <span>P</span>
+        <span>Y</span>
+        <span>-</span>
+        <span>B</span>
+        <span>I</span>
+        <span>R</span>
+        <span>T</span>
+        <span>H</span>
+        <span>D</span>
+        <span>A</span>
+        <span>Y</span>
+        <span>!</span>
+        <span>!</span>
+        <span>!</span>
+    </marquee>
+    <H1>Dear Sanjay, i hope you have an amazing birthday!</H1>
+    <H1>You have been such an inspitation to me and i cant thank you enoug for all your wisdom</H1>
     <H1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, non enim, voluptatem aliquid quod repellendus eligendi alias asperiores fugit veritatis hic similique ex saepe consequuntur magnam architecto nisi voluptas quibusdam?</H1>
     <H1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, non enim, voluptatem aliquid quod repellendus eligendi alias asperiores fugit veritatis hic similique ex saepe consequuntur magnam architecto nisi voluptas quibusdam?</H1>
     <H1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, non enim, voluptatem aliquid quod repellendus eligendi alias asperiores fugit veritatis hic similique ex saepe consequuntur magnam architecto nisi voluptas quibusdam?</H1>
@@ -41,13 +61,22 @@
         <h1>Birthday quiz</h1>
         <div id="question"></div>
         <div id="options"></div>
-        <button id="submit">Submit</button>
       </div>
     
       <script src="index.js"></script>
 <div> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Blanditiis nisi porro rem doloremque iure odit suscipit, vitae repellat maiores minima recusandae assumenda deserunt, neque quia natus! Explicabo omnis nesciunt dolore!</div>
+
+<div class="slideshow-container">
+    <img class="imageSlides" src="img/Sanjay2.jpg" alt="Image 1">
+    <img class="imageSlides" src="img/sanjay1.jpg" alt="Image 2">
+    <img class="imageSlides" src="img/sanjay 3.jpg" alt="Image 3">
+    <img class="imageSlides" src="img/Sanjay4.jpg" alt="Image 4">
+  </div>
+
 </main>
 
-<footer></footer>
+<footer>
+    <p>Hello Hello</p>
+</footer>
 
 </html>
