--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div>
     
     <h1>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis aperiam deserunt ea minima quis vitae illo deleniti, fugiat atque dolorum suscipit esse beatae nihil eaque voluptas exercitationem, quo facilis similique!
+        Lorem ipsum olor sit amet consectetur adipisicing elit. Nobis aperiam deserunt ea minima quis vitae illo deleniti, fugiat atque dolorum suscipit esse beatae nihil eaque voluptas exercitationem, quo facilis similique!
     </h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti consequatur ipsum tempore reprehenderit laudantium! Necessitatibus molestias doloremque natus, et consequatur nobis magnam doloribus omnis harum officiis accusantium corrupti laboriosam ullam.</p>
 </div>
