--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 <main>
     <div>
      <p>
-        You have given so much wisdom and inspiration and i look forward to learning so much more from you.
+        Thank you for all of your wisdom and inspiration, I look forward to learning so much more from you
     </p>
     <p>You are one of my role models and i hope i can be like you</p>
 
-    <p>I look forward to seeing you soon and having a good time</p>
+    <p>I look forward to seeing you soon and celebrating with you!!</p>
 
     <p>Here is a little quiz i made about sanjay</p>
 </div>
