--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Skranji:wght@400;700&display=swap" rel="stylesheet">
@@ -12,7 +13,8 @@
     <title>Happy Birthday!</title>
 
 </head>
-<header> 
+<header>
+
     <marquee scrollamount="15" class="rainbow-letters">
         <span>H</span>
         <span>A</span>
@@ -34,7 +36,6 @@
     </marquee>
     <img src="img/sanjay1.jpg">
     <p>Sanjay!</p>
-    
 
 </header>
 <body class="parallax"> </body>
@@ -47,6 +48,7 @@
     </h1>
     
 </div>
+<div id="tsparticles"></div>
 
 <main>
     <div>
