--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <p>I look forward to seeing you soon and celebrating with you!!</p>
 
-    <p>Here is a little quiz i made about sanjay</p>
+    <p>How well do we know you?</p>
 </div>
     
     <div id="quiz">
