--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
     <img class="imageSlides" src="img/sanjay1.jpg" alt="Image 2">
     <img class="imageSlides" src="img/sanjay 3.jpg" alt="Image 3">
     <img class="imageSlides" src="img/Sanjay4.jpg" alt="Image 4">
+    <img class="imageSlides" src="img/Sanjay5.jpeg" alt="Image 5">
+    <img class="imageSlides" src="img/Sanjay6.jpeg" alt="Image 6">
+    <img class="imageSlides" src="img/Sanjay7.jpeg" alt="Image 7">
+    <img class="imageSlides" src="img/Sanjay8.jpeg" alt="Image 8">
   </div>
 
 </main>
