--- a/index.html
+++ b/index.html
@@ -30,12 +30,18 @@
         <span>D</span>
         <span>A</span>
         <span>Y</span>
+        <span>-</span>
+        <span>S</span>
+        <span>A</span>
+        <span>N</span>
+        <span>J</span>
+        <span>A</span>
+        <span>Y</span>
         <span>!</span>
         <span>!</span>
         <span>!</span>
     </marquee>
     <img src="img/sanjay1.jpg">
-    <p>Sanjay!</p>
 
 </header>
 <body class="parallax"> </body>
@@ -52,34 +58,43 @@
 
 <main>
     <div>
-     <p>
+     <p><b>
         Thank you for all of your wisdom and inspiration, I look forward to learning so much more from you
+    </b>
     </p>
-    <p>You are one of my role models and i hope i can be like you</p>
+    <p><b>You are one of my role models and i hope i can be like you</b></p>
 
-    <p>I look forward to seeing you soon and celebrating with you!!</p>
+    <p><b>I look forward to seeing you soon and celebrating with you!!</b></p>
 
-    <p>How well do we know you?</p>
+    <p><b>From Lucas &#128512;</b></p>
 </div>
     
-    <div id="quiz">
-        <h1>Birthday quiz</h1>
-        <div id="question"></div>
-        <div id="options"></div>
+    <div class="app">
+        <h1>How well do we know you?</h1>
+        <div class="quiz">
+            <h2 id="question"> Question goes here</h2>
+            <div id="answer-buttons">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
+            </div>
+            <button id="next-btn">Next</button>
+        </div>
       </div>
     
       <script src="index.js"></script>
-<div> And here are some pictures of the greatest man alive!</div>
+<div class="slidetitle"><b> And here are some pictures of good times!</b></div>
 
 <div class="slideshow-container">
-    <img class="imageSlides" src="img/Sanjay2.jpg" alt="Image 1">
-    <img class="imageSlides" src="img/sanjay1.jpg" alt="Image 2">
-    <img class="imageSlides" src="img/sanjay 3.jpg" alt="Image 3">
-    <img class="imageSlides" src="img/Sanjay4.jpg" alt="Image 4">
-    <img class="imageSlides" src="img/Sanjay5.jpeg" alt="Image 5">
-    <img class="imageSlides" src="img/Sanjay6.jpeg" alt="Image 6">
-    <img class="imageSlides" src="img/Sanjay7.jpeg" alt="Image 7">
-    <img class="imageSlides" src="img/Sanjay8.jpeg" alt="Image 8">
+    <img class="imageSlides" src="img/1.jpg" alt="Image 1">
+    <img class="imageSlides" src="img/2.jpg" alt="Image 2">
+    <img class="imageSlides" src="img/3.JPG" alt="Image 3">
+    <img class="imageSlides" src="img/4.jpeg" alt="Image 4">
+    <img class="imageSlides" src="img/5.JPG" alt="Image 5">
+    <img class="imageSlides" src="img/6.JPG" alt="Image 6">
+    <img class="imageSlides" src="img/7.jpeg" alt="Image 7">
+    <img class="imageSlides" src="img/8.jpeg" alt="Image 8">
   </div>
 
 </main>
