--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 <div class="slideshow-container">
     <img class="imageSlides" src="img/1.jpg" alt="Image 1">
-    <img class="imageSlides" src="img/2.jpg" alt="Image 2">
+    <img class="imageSlides" src="img/2.JPG" alt="Image 2">
     <img class="imageSlides" src="img/3.JPG" alt="Image 3">
     <img class="imageSlides" src="img/4.jpeg" alt="Image 4">
     <img class="imageSlides" src="img/5.JPG" alt="Image 5">
